--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "Ubuntu",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "smpnet74/devcontainer:v3",
+	"image": "smpnet74/devcontainer:v4",
 	
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -32,7 +32,11 @@
 						"args": ["-l"]
 					}
 				}
-			}
+			},
+			"extensions": [
+				"hashicorp.terraform",
+				"ms-python.python"
+			]
 		}
 	}
 
