--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,8 @@
 			},
 			"extensions": [
 				"hashicorp.terraform",
-				"ms-python.python"
+				"ms-python.python",
+				"mermaidchart.vscode-mermaid-chart"
 			]
 		}
 	}
