--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "Ubuntu",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "smpnet74/devcontainer:v6",
+	"image": "smpnet74/devcontainer:latest",
 	
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
