adding linux-64 to the platforms for pixi

--- a/base-ai-dev/pixi.toml
+++ b/base-ai-dev/pixi.toml
@@ -2,7 +2,7 @@
 authors = ["Scott Peterson <sm_peterson@yahoo.com>"]
 channels = ["conda-forge"]
 name = "ai-dev"
-platforms = ["linux-aarch64"]
+platforms = ["linux-aarch64", "linux-64"]
 version = "0.1.0"
 
 [tasks]
