removing ai tools extentions from devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,10 +37,7 @@
 			},
 			"extensions": [
 				"ms-python.python",
-				"mermaidchart.vscode-mermaid-chart",
-				"augment.vscode-augment",
-				"zencoderai.zencoder",
-				"kilocode.kilo-code"
+				"mermaidchart.vscode-mermaid-chart"
 			]
 		}
 	}
