--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,12 +4,18 @@ on:
   push:
     branches: [ main, master ]
     paths:
-      - 'Dockerfile'
+      - 'docker/Dockerfile'
+      - 'docker/build.sh'
+      - 'docker/push.sh'
+      - 'docker/.dockerignore'
       - '.github/workflows/build-and-push.yml'
   pull_request:
     branches: [ main, master ]
     paths:
-      - 'Dockerfile'
+      - 'docker/Dockerfile'
+      - 'docker/build.sh'
+      - 'docker/push.sh'
+      - 'docker/.dockerignore'
       - '.github/workflows/build-and-push.yml'
   workflow_dispatch:
     inputs:
@@ -75,7 +81,8 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: ./docker
+        file: ./docker/Dockerfile
         platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
